# QmlMobileScanner

./: .gitignore  CMakeLists.txt  MobileScanner.pro  QmlMobileScanner.pro  README.md  TODO.md
.github/workflows/: builds_mobile.yml
assets/: COPYING  assets.qrc
assets/android/: AndroidManifest.xml  build.gradle  gradle.properties
assets/android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash.xml
assets/android/res/values/: apptheme.xml
assets/android/src/com/emeric/utils/: QShareUtils.java
assets/android/src/io/emeric/utils/: QShareUtils.java
assets/gfx/: COPYING
assets/ios/: Info.plist
assets/macos/: Info.plist  QmlMobileScanner.entitlements
qml/: DesktopApplication.qml  DesktopSidebar.qml  MobileApplication.qml  MobileDrawer.qml  MobileHeader.qml  MobilePermissions.qml  PopupCertificate.qml  Reader_QZXing.qml  Reader_ZXingCpp.qml  Reader_zxingcpp.qml  ScreenAbout.qml  ScreenAboutFormats.qml  ScreenBarcode.qml  ScreenBarcodeDetails.qml  ScreenBarcodeHistory.qml  ScreenBarcodeReader.qml  ScreenBarcodeWriter.qml  ScreenBarcode_qzxing.qml  ScreenBarcode_zxingcpp.qml  ScreenMainMenu.qml  ScreenProductList.qml  ScreenScanner.qml  ScreenScanner_qzxing.qml  ScreenScanner_zxingcpp.qml  ScreenSettings.qml  ScreenTutorial.qml  ThemeEngine.qml  Writer_QZXing.qml  Writer_ZXingCpp.qml  Writer_Zint.qml  Writer_zxingcpp.qml  components.qrc  qml.qrc
qml/ComponentLibrary/: qmldir
qml/ComponentLibrary/generic/: ButtonChip.qml
qml/components/: MenuCamera.qml  MenuDebug.qml  MenuFormats.qml  MenuScreens.qml  SelectorGrid.qml  WidgetBarcode.qml  WidgetBarcodeHistory.qml  WidgetBarcodeResult.qml
qml/components_generic/: ItemTagSmall.qml  SelectorGrid.qml
qml/components_js/: UtilsNumber.js
qml/popups/: PopupBarcodeFullscreen.qml  PopupHistoryDelete.qml
src/: Barcode.cpp  Barcode.h  BarcodeManager.cpp  BarcodeManager.h  DatabaseManager.cpp  DatabaseManager.h  PermissionManager.cpp  PermissionManager.h  SettingsManager.cpp  SettingsManager.h  main.cpp  utils_barcode.cpp  utils_barcode.h  utils_camera.cpp  utils_camera.h
